Feature/tfp 6103 skill ut ap (#7370)
* TFP-6103 egen klasse for aksjonspunkt-endringer

* TFP-6103 egen klasse for aksjonspunkt-endringer fler filer